# EcoPrado

./: README.md
ecoprado/: start-server.ps1
ecoprado/backend/: package-lock.json  package.json  server-simple.js  server.js
ecoprado/backend/soroban/: Cargo.toml  client.js  env.js  setup.sh
ecoprado/backend/soroban/src/: lib.rs  pradonsitos_token.rs
ecoprado/backend/stellar/: rewards.js  setup.js  verify-asset.js
ecoprado/frontend/: index.html  package-lock.json  package.json  server.js
ecoprado/frontend/components/: sidebar.html
ecoprado/frontend/pages/: dashboard.html  gran-prado.html  marketplace.html
ecoprado/frontend/public/css/: dashboard.css  main.css  marketplace.css
ecoprado/frontend/public/data/: vendors.json
ecoprado/frontend/public/js/: dashboard.js  gran-prado.js  main.js  marketplace.js  sidebar.js
